--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -27,6 +27,8 @@ Requires: jakarta-commons-io
 Requires: jakarta-commons-cli
 Requires: jpackage-utils
 
+Conflicts: voms-clients
+
 %description
 The Virtual Organization Membership Service (VOMS) is an attribute authority
 which serves as central repository for VO user authorization information,
