--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -26,7 +26,7 @@ BuildRequires: java-devel
 Requires: java
 Requires: voms-api-java3
 Requires: jakarta-commons-io
-Requires: jakarta-commons-cli
+# Requires: jakarta-commons-cli
 Requires: jpackage-utils
 
 Conflicts: voms-clients
@@ -59,6 +59,9 @@ tar -C $RPM_BUILD_ROOT/usr -xvzf target/%{orig_name}.tar.gz --strip 1 --exclude 
 
 # But install the voms-clients jar as well
 tar -C $RPM_BUILD_ROOT/usr -xvzf target/%{orig_name}.tar.gz --strip 1 '%{orig_name}/share/java/%{orig_name}-%{pom_version}.jar'
+
+# And the commons-cli, as the version on SL5 is buggy
+tar -C $RPM_BUILD_ROOT/usr -xvzf target/%{orig_name}.tar.gz --strip 1 --wildcards '%{orig_name}/share/java/commons-cli-*.jar'
 
 ln -s %{orig_name}-%{pom_version}.jar $RPM_BUILD_ROOT%{_javadir}/%{orig_name}.jar
 ln -s %{orig_name}-%{pom_version}.jar $RPM_BUILD_ROOT%{_javadir}/%{name}.jar
