--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -28,9 +28,8 @@ Requires: jakarta-commons-io
 # Requires: jakarta-commons-cli
 Requires: jpackage-utils
 
-Provides: voms-clients
-Provides: voms-clients3
-Conflicts: voms-clients < 3.0
+Provides: voms-clients = %{version}
+Obsoletes: voms-clients 
 
 %description
 The Virtual Organization Membership Service (VOMS) is an attribute authority
