--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -6,7 +6,7 @@
 %global _varlib /var/lib
 
 Name: voms-clients3
-Version: 3.0.2
+Version: 3.0.3
 Release: 1%{?dist}
 Summary: The Virtual Organisation Membership Service command line clients
 
@@ -103,6 +103,13 @@ done
 
 
 %changelog
+* Thu Jul 11 2013 Andrea Ceccanti <andrea.ceccanti at cnaf.infn.it> - 3.0.3-1
+- Fix for https://issues.infn.it/jira/browse/VOMS-361
+
+* Tue Jul 2 2013 Valerio Venturi <valerio.venturi at cnaf.infn.it> - 3.0.2-1
+- Fix for https://issues.infn.it/jira/browse/VOMS-307
+- Fix for https://issues.infn.it/jira/browse/VOMS-296
+
 * Thu Apr 11 2013 Andrea Ceccanti <andrea.ceccanti at cnaf.infn.it> - 3.0.1-1
 - Fix for https://issues.infn.it/browse/VOMS-256
 
