--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -7,7 +7,7 @@
 
 Name: voms-clients3
 Version: 3.0.4
-Release: 0%{?dist}
+Release: 1%{?dist}
 Summary: The Virtual Organisation Membership Service command line clients
 
 Group: Applications/Internet
@@ -104,7 +104,8 @@ done
 
 %changelog
 * Thu Sep 26 2013 Andrea Ceccanti <andrea.ceccanti at cnaf.infn.it> - 3.0.4-1
-- Move to CANL 1.3.0
+- Fix for https://issues.infn.it/jira/browse/VOMS-423
+- Move to VOMS Java APIs v. 3.0.2
 
 * Thu Jul 11 2013 Andrea Ceccanti <andrea.ceccanti at cnaf.infn.it> - 3.0.3-1
 - Fix for https://issues.infn.it/jira/browse/VOMS-361
