--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -6,8 +6,8 @@
 %global _varlib /var/lib
 
 Name: voms-clients3
-Version: 3.0.4
-Release: 1%{?dist}
+Version: 3.0.5
+Release: 0%{?dist}
 Summary: The Virtual Organisation Membership Service command line clients
 
 Group: Applications/Internet
@@ -103,6 +103,9 @@ done
 
 
 %changelog
+* Mon Jan 27 2014 Andrea Ceccanti <andrea.ceccanti at cnaf.infn.it> - 3.0.5-1
+- Fix for https://issues.infn.it/jira/browse/VOMS-460
+
 * Thu Sep 26 2013 Andrea Ceccanti <andrea.ceccanti at cnaf.infn.it> - 3.0.4-1
 - Fix for https://issues.infn.it/jira/browse/VOMS-423
 - Move to VOMS Java APIs v. 3.0.2
