--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -159,7 +159,7 @@ fi
 %changelog
 
 * Mon Jan 27 2014 Andrea Ceccanti <andrea.ceccanti at cnaf.infn.it> - 3.0.5-0
-- Fix for https://issues.infn.it/jira/browse/VOMS-495. New packaging installable in
+- Fix for https://issues.infn.it/jira/browse/VOMS-495. New packaging installable
   together with with voms-clients 2.x package.
 - Fix for https://issues.infn.it/jira/browse/VOMS-460
 
