--- a/voms-clients.spec.in
+++ b/voms-clients.spec.in
@@ -32,7 +32,7 @@ Requires(post):         %{_sbindir}/update-alternatives
 Requires(postun):       %{_sbindir}/update-alternatives
 
 Provides:       voms-clients = %{version}
-Conflicts:      voms-clients <= 2.0.11-1%{?dist}
+Conflicts:      voms-clients <= 2.0.11-1
 
 
 %description
